fixed element overlap with browser window adjust

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ body{
 
 .logo img {
   position: absolute;
-  top: 20%;
-  left: 16%;
+  top: 200px;
+  left: 270px;
   width: 100%;
   height: 100%;
   padding: 5px;
@@ -47,8 +47,8 @@ body{
   display: inline-block;
   margin: 50px;
   position: absolute;
-  top: 15%;
-  right: 10%;
+  top: 150px;
+  right: 150px;
   padding: 5px;
   width: 270px;
   height: 280px;
@@ -64,8 +64,8 @@ body{
   font-family: "Mansalva", sans-serif;
   z-index: 1;
   color: #fa8500;
-  top: 20%;
-  left: 35%;
+  top: 200px;
+  left: 550px;
   position: absolute;
   font-size: 30px;
   font-weight: bold;
@@ -75,19 +75,16 @@ body{
   font-family: "Mansalva", sans-serif;
   z-index: 1;
   color: #fa8500;
-  left: 35%;
-  right: 35%;
-  top: 31%;
+  left: 550px;
+  top: 310px;
   position: absolute;
   font-size: 30px;
 }
 
 .extrainfo2 p {
-  
   z-index: 1;
   color:  #fa8500;
-  left: 35%;
-  right: 35%;
+  left: 530px;
   top: 1350px;
   position: absolute;
   font-size: 30px;
@@ -139,7 +136,7 @@ body{
 
 .sidenavlogo img {
   position: absolute;
-  top: 10%;
+  top: 100px;
   display: block;
   width: 50%;
   height: 50%;
@@ -181,17 +178,6 @@ body{
   font-size: 15px;
 }
 
-@media screen and (max-width: 500px) {
-  .sidenav a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-
-  .header-right {
-    float: none;
-  }
-}
 
 .cards {
   position: absolute;
@@ -271,7 +257,7 @@ ul {
   display: flex;
   position: fixed;
   bottom: 0;
-  right: 2%;
+  right: 20px;
   justify-content: center;
   align-items: center;
   z-index: 1;
@@ -370,4 +356,36 @@ ul {
 .example-2 .icon-content a[data-social="facebook"] .filled,
 .example-2 .icon-content a[data-social="facebook"]~.tooltip {
   background-color: #0274b3;
+}
+
+
+@media screen and (max-width: 500px) {
+  .moneymaker img{
+    --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
+    display: inline-block;
+    margin: 50px;
+    position: absolute;
+    top: 150px;
+    right: 150px;
+    padding: 5px;
+    width: 100px;
+    height: 140px;
+    border-radius: 1rem;
+    overflow: visible;
+    background: #f7ba2b;
+    background: var(--background);
+    z-index: 1;
+  }
+  
+
+  
+  .sidenav a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+
+  .header-right {
+    float: none;
+  }
 }
